[metadata]
name = isro-mission-checker
version = 1.0.0
author = Shankarsan Ganai
author_email = shankarsan@example.com
description = A Python-based automation tool for monitoring ISRO missions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shankershawn/isro-missions
project_urls =
    Bug Tracker = https://github.com/shankershawn/isro-missions/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
install_requires =
    selenium>=4.0.0
    redis>=5.0.0
    schedule>=1.2.0

[options.packages.find]
where = .
include = com*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    black>=23.0.0
    isort>=5.0.0
    flake8>=6.0.0
    pylint>=2.0.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --strict-markers --tb=short

[coverage:run]
source = com
omit = */tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[flake8]
max-line-length = 127
exclude = .git,.venv,build,dist,*.egg-info
ignore = E203,W503

[isort]
profile = black
line_length = 127
skip_gitignore = True

[black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311']

